adding finished basic feature

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 26 17:41:02 CET 2019
-sdk.dir=C\:\\Users\\msosnowski\\AppData\\Local\\Android\\Sdk
+#Wed Mar 27 09:31:55 CET 2019
+sdk.dir=C\:\\Users\\msosnowski.HEADQUARTER\\AppData\\Local\\Android\\Sdk
