--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 27 09:31:55 CET 2019
-sdk.dir=C\:\\Users\\msosnowski.HEADQUARTER\\AppData\\Local\\Android\\Sdk
+#Thu Mar 28 19:26:21 CET 2019
+sdk.dir=C\:\\Users\\itadmin\\AppData\\Local\\Android\\Sdk
